--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cv",
   "version": "0.1.0",
   "private": true,
-  "home":"http://jejaksetapak.github.io/wawan/",
+  "home":"https://jejaksetapak.github.io/wawan/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
